// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in blockchain mode 'Add Block' button is not present when block is invalid 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #ff9a9a;
}

.c2:hover {
  cursor: pointer;
  background-color: #c7e4ff;
}

.c1.c1.c1 {
  font-weight: bold;
}

<form
    aria-label="Block Form Invalid"
    class="c0 p-2 rounded"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Index
        </span>
      </div>
      <input
        aria-label="Block Index"
        class="form-control"
        disabled=""
        name="index"
        type="number"
        value="2"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Timestamp
        </span>
      </div>
      <input
        aria-label="Block Timestamp"
        class="form-control"
        disabled=""
        name="timestamp"
        type="number"
        value="1619827200000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Previous #
        </span>
      </div>
      <input
        aria-label="Block PrevHash"
        class="text-truncate form-control"
        name="prevHash"
        readonly=""
        type="text"
        value="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Current #
        </span>
      </div>
      <input
        aria-label="Block CurrHash"
        class="text-truncate form-control"
        name="currHash"
        readonly=""
        type="text"
        value="ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ"
      />
    </div>
    <div
      class="mt-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Merkle #
        </span>
      </div>
      <input
        aria-label="Block Merkle"
        class="text-truncate form-control"
        name="merkleRoot"
        readonly=""
        type="text"
        value="567.89ZForthTransactionAZ567.89A"
      />
      <div
        class="input-group-append"
      >
        <span
          aria-label="Show Trans"
          class="c2 input-group-text"
        >
          <svg
            aria-label="Contract Icon"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`in blockchain mode 'Add Block' button is not present when block is valid 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #b4ff9a;
}

.c2:hover {
  cursor: pointer;
  background-color: #c7e4ff;
}

.c1.c1.c1 {
  font-weight: bold;
}

<form
    aria-label="Block Form"
    class="c0 p-2 rounded"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Index
        </span>
      </div>
      <input
        aria-label="Block Index"
        class="form-control"
        disabled=""
        name="index"
        type="number"
        value="1"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Timestamp
        </span>
      </div>
      <input
        aria-label="Block Timestamp"
        class="form-control"
        disabled=""
        name="timestamp"
        type="number"
        value="1619827200000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Previous #
        </span>
      </div>
      <input
        aria-label="Block PrevHash"
        class="text-truncate form-control"
        name="prevHash"
        readonly=""
        type="text"
        value="0000000000000000000000000000000000000000000000000000000000000000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Current #
        </span>
      </div>
      <input
        aria-label="Block CurrHash"
        class="text-truncate form-control"
        name="currHash"
        readonly=""
        type="text"
        value="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
      />
    </div>
    <div
      class="mt-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Merkle #
        </span>
      </div>
      <input
        aria-label="Block Merkle"
        class="text-truncate form-control"
        name="merkleRoot"
        readonly=""
        type="text"
        value="987.65EForthTransactionAE987.65A"
      />
      <div
        class="input-group-append"
      >
        <span
          aria-label="Show Trans"
          class="c2 input-group-text"
        >
          <svg
            aria-label="Expand Icon"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707zm4.344-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`in blockchain mode handleViewTransactions changes emoji when show transactions is clicked 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #b4ff9a;
}

.c2:hover {
  cursor: pointer;
  background-color: #c7e4ff;
}

.c1.c1.c1 {
  font-weight: bold;
}

<form
    aria-label="Block Form"
    class="c0 p-2 rounded"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Index
        </span>
      </div>
      <input
        aria-label="Block Index"
        class="form-control"
        disabled=""
        name="index"
        type="number"
        value="1"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Timestamp
        </span>
      </div>
      <input
        aria-label="Block Timestamp"
        class="form-control"
        disabled=""
        name="timestamp"
        type="number"
        value="1619827200000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Previous #
        </span>
      </div>
      <input
        aria-label="Block PrevHash"
        class="text-truncate form-control"
        name="prevHash"
        readonly=""
        type="text"
        value="0000000000000000000000000000000000000000000000000000000000000000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Current #
        </span>
      </div>
      <input
        aria-label="Block CurrHash"
        class="text-truncate form-control"
        name="currHash"
        readonly=""
        type="text"
        value="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
      />
    </div>
    <div
      class="mt-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Merkle #
        </span>
      </div>
      <input
        aria-label="Block Merkle"
        class="text-truncate form-control"
        name="merkleRoot"
        readonly=""
        type="text"
        value="987.65EForthTransactionAE987.65A"
      />
      <div
        class="input-group-append"
      >
        <span
          aria-label="Show Trans"
          class="c2 input-group-text"
        >
          <svg
            aria-label="Contract Icon"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`in blockchain mode renders correctly index === 0 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #b4ff9a;
}

.c1.c1.c1 {
  font-weight: bold;
}

<form
    aria-label="Block Form"
    class="c0 p-2 rounded"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Index
        </span>
      </div>
      <input
        aria-label="Block Index"
        class="form-control"
        disabled=""
        name="index"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Timestamp
        </span>
      </div>
      <input
        aria-label="Block Timestamp"
        class="form-control"
        disabled=""
        name="timestamp"
        type="number"
        value="1619827200000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Previous #
        </span>
      </div>
      <input
        aria-label="Block PrevHash"
        class="text-truncate form-control"
        name="prevHash"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Current #
        </span>
      </div>
      <input
        aria-label="Block CurrHash"
        class="text-truncate form-control"
        name="currHash"
        readonly=""
        type="text"
        value="0000000000000000000000000000000000000000000000000000000000000000"
      />
    </div>
    <div
      class="mt-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Merkle #
        </span>
      </div>
      <input
        aria-label="Block Merkle Genesis"
        class="form-control"
        disabled=""
        name="merkleRoot"
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`in blockchain mode renders correctly index > 0 index → 1, class → {"background": "#b4ff9a"} 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #b4ff9a;
}

.c2:hover {
  cursor: pointer;
  background-color: #c7e4ff;
}

.c1.c1.c1 {
  font-weight: bold;
}

<form
    aria-label="Block Form"
    class="c0 p-2 rounded"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Index
        </span>
      </div>
      <input
        aria-label="Block Index"
        class="form-control"
        disabled=""
        name="index"
        type="number"
        value="1"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Timestamp
        </span>
      </div>
      <input
        aria-label="Block Timestamp"
        class="form-control"
        disabled=""
        name="timestamp"
        type="number"
        value="1619827200000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Previous #
        </span>
      </div>
      <input
        aria-label="Block PrevHash"
        class="text-truncate form-control"
        name="prevHash"
        readonly=""
        type="text"
        value="0000000000000000000000000000000000000000000000000000000000000000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Current #
        </span>
      </div>
      <input
        aria-label="Block CurrHash"
        class="text-truncate form-control"
        name="currHash"
        readonly=""
        type="text"
        value="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
      />
    </div>
    <div
      class="mt-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Merkle #
        </span>
      </div>
      <input
        aria-label="Block Merkle"
        class="text-truncate form-control"
        name="merkleRoot"
        readonly=""
        type="text"
        value="987.65EForthTransactionAE987.65A"
      />
      <div
        class="input-group-append"
      >
        <span
          aria-label="Show Trans"
          class="c2 input-group-text"
        >
          <svg
            aria-label="Expand Icon"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707zm4.344-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`in blockchain mode renders correctly index > 0 index → 2, class → {"background": "#ff9a9a"} 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #ff9a9a;
}

.c2:hover {
  cursor: pointer;
  background-color: #c7e4ff;
}

.c1.c1.c1 {
  font-weight: bold;
}

<form
    aria-label="Block Form Invalid"
    class="c0 p-2 rounded"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Index
        </span>
      </div>
      <input
        aria-label="Block Index"
        class="form-control"
        disabled=""
        name="index"
        type="number"
        value="2"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Timestamp
        </span>
      </div>
      <input
        aria-label="Block Timestamp"
        class="form-control"
        disabled=""
        name="timestamp"
        type="number"
        value="1619827200000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Previous #
        </span>
      </div>
      <input
        aria-label="Block PrevHash"
        class="text-truncate form-control"
        name="prevHash"
        readonly=""
        type="text"
        value="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Current #
        </span>
      </div>
      <input
        aria-label="Block CurrHash"
        class="text-truncate form-control"
        name="currHash"
        readonly=""
        type="text"
        value="ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ"
      />
    </div>
    <div
      class="mt-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Merkle #
        </span>
      </div>
      <input
        aria-label="Block Merkle"
        class="text-truncate form-control"
        name="merkleRoot"
        readonly=""
        type="text"
        value="567.89ZForthTransactionAZ567.89A"
      />
      <div
        class="input-group-append"
      >
        <span
          aria-label="Show Trans"
          class="c2 input-group-text"
        >
          <svg
            aria-label="Contract Icon"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`in preview mode renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #ff9a9a;
}

.c1.c1.c1 {
  font-weight: bold;
}

<form
    aria-label="Block Form Invalid"
    class="c0 col-12 col-lg-5 p-2 rounded"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Index
        </span>
      </div>
      <input
        aria-label="Block Index"
        class="form-control"
        disabled=""
        name="index"
        type="number"
        value="3"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Timestamp
        </span>
      </div>
      <input
        aria-label="Block Timestamp"
        class="form-control"
        disabled=""
        name="timestamp"
        type="number"
        value="1619913600000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Previous #
        </span>
      </div>
      <input
        aria-label="Block PrevHash"
        class="text-truncate form-control"
        name="prevHash"
        readonly=""
        type="text"
        value="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Current #
        </span>
      </div>
      <input
        aria-label="Block CurrHash"
        class="text-truncate form-control"
        name="currHash"
        readonly=""
        type="text"
        value="BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
      />
    </div>
    <div
      class="mt-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Merkle #
        </span>
      </div>
      <input
        aria-label="Block Merkle"
        class="text-truncate form-control"
        name="merkleRoot"
        readonly=""
        type="text"
        value="previewMerkle"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`in preview mode valid State Shows 'Add Block' button 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #b4ff9a;
}

.c2 {
  padding: 4px 0;
  margin-top: 8px;
  font-size: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1 {
  font-weight: bold;
}

<form
    aria-label="Block Form"
    class="c0 col-12 col-lg-5 p-2 rounded"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Index
        </span>
      </div>
      <input
        aria-label="Block Index"
        class="form-control"
        disabled=""
        name="index"
        type="number"
        value="3"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Timestamp
        </span>
      </div>
      <input
        aria-label="Block Timestamp"
        class="form-control"
        disabled=""
        name="timestamp"
        type="number"
        value="1619913600000"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Previous #
        </span>
      </div>
      <input
        aria-label="Block PrevHash"
        class="text-truncate form-control"
        name="prevHash"
        readonly=""
        type="text"
        value="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Current #
        </span>
      </div>
      <input
        aria-label="Block CurrHash"
        class="text-truncate form-control"
        name="currHash"
        readonly=""
        type="text"
        value="BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
      />
    </div>
    <div
      class="mt-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c1 input-group-text"
        >
          Merkle #
        </span>
      </div>
      <input
        aria-label="Block Merkle"
        class="text-truncate form-control"
        name="merkleRoot"
        readonly=""
        type="text"
        value="previewMerkle"
      />
    </div>
    <button
      aria-label="Add Block"
      class="c2 btn btn-success btn-block"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0z"
        />
      </svg>
    </button>
  </form>
</DocumentFragment>
`;
